Fixed bug in gh-pages

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8" />
     <title>JP & R</title>
-  </head>
-  <body>
-  <script src="index.js"></script></body>
+</head>
+<body>
+<div>
+    <div id="react-root"></div>
+    <script type="text/javascript" src="index.js"></script>
+</div>
+<script src="index.js"></script></body>
 </html>
